--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1482,3 +1482,21 @@ table.payment-method-features td {
 		.ellipsis();
 	}
 }
+
+
+/* Scheduled tasks
+-------------------------------------------------------------- */
+
+.minimal-task-widget {
+	min-height: 26px;
+}
+.minimal-task-widget .task-progress {
+	width: 400px;
+}
+.minimal-task-widget .btn-cancel-task {
+	margin-left: 10px
+}
+.minimal-task-widget .btn-actions {
+	display: inline-block; 
+	margin-left: 10px;
+}
