--- a/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/MinimalTask.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/MinimalTask.cshtml
@@ -6,14 +6,14 @@
 	var hasPermission = ViewBag.HasPermission == true;
 	var cancellable = ViewBag.Cancellable == true;
 }
-<div id="@widgetId" class="minimal-task-widget clearfix" style="min-height: 26px">
+<div id="@widgetId" class="minimal-task-widget clearfix">
 	<div class="task-info@(Model.IsRunning ? " hide" : "")">
 		@Html.Partial("_MinimalTaskWidget", Model)
 	</div>
-	<div class='task-progress pull-left text-success@(Model.IsRunning ? "" : " hide")' data-task-id='@Model.Id' data-running='@(Model.IsRunning ? "true" : "false")' style="width: 400px"></div>
+	<div class='task-progress pull-left text-success@(Model.IsRunning ? "" : " hide")' data-task-id='@Model.Id' data-running='@(Model.IsRunning ? "true" : "false")'></div>
 	@if (cancellable && hasPermission)
 	{
-		<a href='@Model.CancelUrl' data-task-id='@Model.Id' class='btn btn-small btn-danger btn-cancel-task@(!Model.IsRunning ? " hide" : "")' style="margin-left: 10px" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+		<a href='@Model.CancelUrl' data-task-id='@Model.Id' class='btn btn-small btn-danger btn-cancel-task@(!Model.IsRunning ? " hide" : "")' onclick="return confirm('@T("Admin.Common.AreYouSure")');">
 			@T("Common.Cancel")
 		</a>
 	}
