--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_CreateOrUpdate.Filter.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_CreateOrUpdate.Filter.cshtml
@@ -104,7 +104,7 @@
 			<td class="adminData">
 				@Html.ListBoxFor(x => x.ProductFilter.CategoryIds,
 						new MultiSelectList(Model.ProductFilter.AvailableCategories, "Value", "Text"),
-						new { multiple = "multiple", @class = "control-xlarge" })
+						new { multiple = "multiple" })
 				@Html.ValidationMessageFor(x => x.ProductFilter.CategoryIds)
 			</td>
 		</tr>
