Closes #202 Implement option for product list 'default sort order'

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -480,6 +480,16 @@
             </tr>
             <tr>
                 <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.DefaultSortOrder)
+                </td>
+                <td class="adminData">
+                    @Html.SettingOverrideCheckbox(model => Model.DefaultSortOrder)
+                    @Html.DropDownListFor(model => model.DefaultSortOrder, Model.AvailableSortOrderModes)
+                    @Html.ValidationMessageFor(model => model.DefaultSortOrder)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.AllowProductViewModeChanging)
                 </td>
                 <td class="adminData">
