--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -891,7 +891,7 @@
                 {
                     <h4>@T("Admin.Order.CustomerComment.Heading")</h4>
                     <div class="alert alert-info fade in">
-                        @Html.Raw(Model.CustomerComment)
+                        @Model.CustomerComment
                     </div>
                 }
             </td>
