--- a/src/Presentation/SmartStore.Web/Views/ReturnRequest/ReturnRequest.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ReturnRequest/ReturnRequest.Mobile.cshtml
@@ -64,11 +64,11 @@
             <div class="why">
                 <div>
                     @Html.LabelFor(model => model.ReturnReason)
-                    @Html.DropDownListFor(model => model.ReturnReason, Model.AvailableReturnReasons, new { @class = "return-reasons" })
+                    @Html.DropDownListFor(model => model.ReturnReason, Model.AvailableReturnReasons, new { @class = "return-reasons", data_native_menu = "false" })
                 </div>
                 <div>
                     @Html.LabelFor(model => model.ReturnAction)
-                    @Html.DropDownListFor(model => model.ReturnAction, Model.AvailableReturnActions, new { @class = "return-actions" })
+                    @Html.DropDownListFor(model => model.ReturnAction, Model.AvailableReturnActions, new { @class = "return-actions", data_native_menu = "false" })
                 </div>
                 <div>
                     @Html.LabelFor(model => model.Comments)
