--- a/src/Presentation/SmartStore.Web/Views/Shared/_CreateOrUpdateAddress.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_CreateOrUpdateAddress.Mobile.cshtml
@@ -96,7 +96,7 @@
 {
     <div>
         @Html.LabelFor(model => model.CountryId, new { @class = "control-label required", @for = "CountryId" })
-        @Html.DropDownListFor(model => model.CountryId, Model.AvailableCountries)
+        @Html.DropDownListFor(model => model.CountryId, Model.AvailableCountries, new { data_native_menu = "false" })
         @Html.ValidationMessageFor(model => model.CountryId)
     </div>
 }
@@ -104,7 +104,7 @@
 {
     <div>
         @Html.LabelFor(model => model.StateProvinceId, new { @class = "control-label", @for = "StateProvinceId" })
-        @Html.DropDownListFor(model => model.StateProvinceId, Model.AvailableStates)
+        @Html.DropDownListFor(model => model.StateProvinceId, Model.AvailableStates, new { data_native_menu = "false" })
         @Html.ValidationMessageFor(model => model.StateProvinceId)
     </div>
 }
