Fixed weird routing problem with topic ConditionsOfUse in multi store environment

--- a/src/Presentation/SmartStore.Web/Views/Common/InfoBlock.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/InfoBlock.Mobile.cshtml
@@ -27,7 +27,7 @@
 <div data-role="navbar">
     <ul>
         <li><a href="@Url.RouteUrl("Topic", new { SystemName = "privacyinfo" })" data-role="button">@T("PrivacyNotice")</a></li>
-        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "conditionsofUse" })" data-role="button">@T("ConditionsOfUse")</a></li>
+        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "conditionsofuse" })" data-role="button">@T("ConditionsOfUse")</a></li>
     </ul>
 </div>
 <div data-role="navbar">
